Base Configuration Done

--- a/Admin/css/style.css
+++ b/Admin/css/style.css
@@ -136,4 +136,8 @@ body{
     color: #ffbbbc;
     background-color: #c0392b;
   }
+
+  .navbar-default .navbar-brand {
+    padding-top:15px !important;
+  }
 }
