--- a/Admin/view/home.html
+++ b/Admin/view/home.html
@@ -1,3 +1,46 @@
-<div class="jumbotron text-center">
+<!-- <div class="jumbotron text-center">
     <h1>{{ msg }}</h1>
+</div> -->
+
+<div class="panel panel-default">
+    <div class="panel-heading main-color-bg">
+        <h3 class="panel-title">Smart Campus Service</h3>
+    </div>
+    <div class="panel-body">
+        <div class="col-md-3 col-xs-3">
+            <div class="well text-center">
+                <h2>Student</h2>
+                <h4>count 1</h4>
+            </div>
+        </div>
+        <div class="col-md-3 col-xs-3">
+            <div class="well text-center">
+                <h2>Staff</h2>
+                <h4>count 2</h4>
+            </div>
+        </div>
+        <div class="col-md-3 col-xs-3">
+            <div class="well text-center">
+                <h2>Absent</h2>
+                <h4>count 3</h4>
+            </div>
+        </div>
+        <div class="col-md-3 col-xs-3">
+            <div class="well text-center">
+                <h2>SMS</h2>
+                <h4>count 4</h4>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="panel panel-default">
+    <div class="panel-heading main-color-bg">
+        <h3 class="panel-title">Student's In different Departments</h3>
+    </div>
+    <div class="panel-body">
+        <!-- Chart added here -->
+        <h1 class="page-header text-capitalize">chart.js with ngRoute some issue found not accessable</h1>
+        <canvas id="myChart" width="300" height="300"></canvas>
+    </div>
 </div>
